update to-do project

--- a/18 - Todo List Project/index.html
+++ b/18 - Todo List Project/index.html
@@ -14,7 +14,7 @@
       <input type="text" placeholder="Add New Todo">
 
       <ul>
-        <li><span><i class="fa fa-trash"></i></span> By New Want</li>
+        <li><span><i class="fa fa-trash"></i></span> Buy New Want</li>
         <li><span><i class="fa fa-trash"></i></span> Feed Hedwing</li>
         <li><span><i class="fa fa-trash"></i></span> Send Owl to Serius</li>
         <li><span><i class="fa fa-trash"></i></span> Wash Robes</li>
