--- a/18 - Todo List Project/index.html
+++ b/18 - Todo List Project/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>To-do List</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <script src="https://use.fontawesome.com/8be9308866.js"></script>
@@ -14,9 +14,9 @@
       <input type="text" placeholder="Add New Todo">
 
       <ul>
-        <li><span><i class="fa fa-trash"></i></span> Buy New Want</li>
+        <li><span><i class="fa fa-trash"></i></span> Buy New Wand</li>
         <li><span><i class="fa fa-trash"></i></span> Feed Hedwing</li>
-        <li><span><i class="fa fa-trash"></i></span> Send Owl to Serius</li>
+        <li><span><i class="fa fa-trash"></i></span> Send Owl to Sirius</li>
         <li><span><i class="fa fa-trash"></i></span> Wash Robes</li>
         <li><span><i class="fa fa-trash"></i></span> Buy Hagrid's Birthday Gift</li>
       </ul>
